tests/fail/invalid_spread.stderr
error: unexpected end of input, expected an expression
 --> tests/fail/invalid_spread.rs:7:16
  |
7 |             {..}
  |                ^
